--- a/app/views/nothingtorate.scala.html
+++ b/app/views/nothingtorate.scala.html
@@ -11,8 +11,8 @@
                         Wir werden dich per E-Mail benachrichten falls neue Artikel bewertet werden müssen.
                     </p>
 
-                    <div class="col-xs-12 col-md-3 col-sm-6 col-lg-3">
-                        <a class="info-tiles tiles-success" href="#">
+                    <div class="col-xs-12 col-md-12 col-sm-12 col-lg-12">
+                        <a class="info-tiles tiles-success" href="">
                             <div class="tiles-heading">
                                 <div class="pull-left">Dein Punktestand</div>
                                 <div class="pull-right">@user.email</div>
