--- a/app/views/rating.scala.html
+++ b/app/views/rating.scala.html
@@ -1,4 +1,4 @@
-@(article: Article)
+@(article: Article, keywords: List[Keyword])
 
 @main("Artikel Bewerten") {
 <div class="container"><!-- container -->
@@ -18,19 +18,32 @@
                     @Html(article.content)
 
                 </div>
-                <div class="panel-footer right">
-                    <div id="ratingWrapper">
-                        <div class="fa fa-chevron-left ratingLabel">  NEGATIV</div>
-                        <div id="ratingBox">
-                            <ul id="rating">
-                                <li><a href="#">Dieser Artikel ist sehr negativ</a></li>
-                                <li><a href="#">Dieser Artikel ist negativ</a></li>
-                                <li><a href="#">Dieser Artikel ist neutral</a></li>
-                                <li><a href="#">Dieser Artikel ist positiv</a></li>
-                                <li><a href="#">Dieser Artikel ist sehr positiv</a></li>
-                            </ul>
+                <div class="panel-footer">
+
+                        <div id="ratingWrapper">
+                            <div class="fa fa-chevron-left ratingLabel">  NEGATIV</div>
+                            <div id="ratingBox">
+                                <ul id="rating">
+                                    <li><a href="#">Dieser Artikel ist sehr negativ</a></li>
+                                    <li><a href="#">Dieser Artikel ist negativ</a></li>
+                                    <li><a href="#">Dieser Artikel ist neutral</a></li>
+                                    <li><a href="#">Dieser Artikel ist positiv</a></li>
+                                    <li><a href="#">Dieser Artikel ist sehr positiv</a></li>
+                                </ul>
+                            </div>
+                            <div class="ratingLabel">POSITIV  <span class="fa fa-chevron-right">&nbsp;</span></div>
                         </div>
-                        <div class="ratingLabel">POSITIV  <span class="fa fa-chevron-right">&nbsp;</span></div>
+
+
+                    <div class="form-group" style="clear:both">
+                        <hr />
+                        <div class="keywordSelect">
+                            <select multiple="multiple" id="multi-select">
+                                @keywords.map { keyword =>
+                                    <option value="@keyword.id">@keyword.name</option>
+                                }
+                            </select>
+                        </div>
                     </div>
                 </div>
             </div>
