--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,15 +2,26 @@
 @main("Willkommen") {
     <div class="container"><!-- container -->
 
-        <h1>RapidReckon - Soziale Tends vor den Anderen erkennen!</h1>
+        <h1>RapidReckon - Erkennen Sie soziale Tends vor der Konkurrenz!</h1>
 
         <div class="panel panel-primary">
             <div class="panel-body">
                 <h3>Herzlich Willkommen!</h3>
+                <p>Du hast dich erfolgreich bei uns registriert und kannst nun loslegen. Im Folgen erfährst du was du vorher wissen solltest.</p>
 
-                <p>Die relevante Plattform f&uuml;r dieses Projekt soll das Blogsystem von Tumblr sein. &Uuml;ber eine Programmierschnittstelle (API) sollen von vorausgew&auml;hlten, relevanten Blogs, unternehmensbezogene Beitr&auml;ge extrahiert werden.<br />Nachdem die relevanten Blogs ausfindig gemacht worden sind, sucht ein Mechanismus mittles einer Stichwortsuche alle Eintr&auml;ge des jeweiligen Blogs, in denen das Stichwort vorkommt. Annahme: Jeder Post, in dem das Stichwort (der Unternehmensname) zu finden ist hat Bezug zu diesem Unternehmen, wenn auch nicht direkt. Beitr&auml;ge sollen nun extrahiert werden und in die Datenbank des Systems eingetragen werden.<br />Hierzu m&uuml;ssen neben dem Inhalt des Beitrags auch der Blogname, sowie das Datum der Ver&ouml;ffentlichung f&uuml;r Analysezwecke gesichert werden. Sind Beitr&auml;ge nun im System eingespeist, so sollen diese Nutzern verf&uuml;gbar gemacht werden.<br />Nutzer haben die M&ouml;glichkeit sich lediglich mit einer Mail-Adresse, Geschlechtsangabe und einem Kennwort zu registrieren, da die Abfrage zu vieler Daten abschreckend wirken kann und f&uuml;r das System nicht relevant ist. So dient die Mail-Adresse neben dem Login als Mittel der Kommunikation zwischen dem System und dem Nutzer.</p>
+                <h3>Wer sind wir?</h3>
+                <p>Wir sind ein junges dynamisches Unternehmen, dass es sich zum Ziel gesetzt hat Unternehmen durch soziale Tredanalyse zu unterstützen. Eine mögliche Anwendung für Unternehmen ist die bessere Kontrolle von Marketingmaßnahmen. Sie erhalten so einen Überblick, wie Ihre Marketing-Maßnahmen in der online-Welt ankommen.</p>
 
-                <h3>Du kannst auch weitere Freunde einladen:</h3>
+                <h3>Warum brauchen wir deine Hilfe?</h3>
+                <p>Wir verwenden einen intelligenten lernfähigen Algorithmus der selbständig Blogeinträge bewerten kann. Er soll also dieselbe Aufgabe durchführen, die du zunächst übernehmen sollst. Du fragst dich wozu wir dich dann brauchen? Der Algorithmus muss erst trainiert werden, damit er ein Gefühl dafür bekommt was eine gute- bzw. eine schlechte Stimmung ist. An dieser Stelle kommst du ins Spiel. Du kannst von Natur aus die Stimmung in einem Beitrag bewerten. Haben wir genug menschliche Daten können wir auf Basis dieser unseren Algorithmus trainieren und fortan automatische Bewertungen vornehmen.</p>
+
+                <h3>Was hast du davon?</h3>
+                <p>Du sammelst mit jeder Bewertung Punkte und kannst diese ab einer bestimmten Summe gegen eine große Auswahl an Prämien eintauschen. Oben rechts in der Menüleiste wird dir dein aktueller Punktestand angezeigt. Klicke auf <strong>Punkte einlösen</strong> im linken Menü um zu sehen welche Prämien dich erwarten.</strong></p>
+
+                <h3>Was musst du dafür tun?</h3>
+                <p>Nichts weiter als rechts im Menü auf <strong>Artikel bewerten</strong> klicken und schon kannst du anfangen Artikel zu bewerten. Solltest du mit einem Eintrag nichts anfangen können klicke einfach auf <strong>Artikel überspringen</strong> und schon kannst du mit dem nächsten fortfahren. Beachte, dass du einen Artikel erst nach einer gewissen Zeit abschicken kannst! So wollen wir verhindern, dass Benutzer Punkte sammeln ohne den Artikel wirklich gelesen zu haben.</p>
+
+                <h3>Lade Freunde ein und sammle dadurch weitere Punkte</h3>
                 <dl class="dl-horizontal" style="font-size:15px;">
                     <dt class="fa  fa-twitter"></dt>
                     <dd><a>Twitter</a></dd>
@@ -24,11 +35,6 @@
                     <dt class="fa  fa-envelope"></dt>
                     <dd><a>E-Mail</a></dd>
                 </dl>
-
-                <p>Loggt ein Nutzer sich nun im System ein, so werden ihm Posts angezeigt, welches es gilt anhand eines Stimmunsbarometers zu bewerten. Die Skala reicht von -5 f&uuml;r sehr schlecht &uuml;ber 0 f&uuml;r neutral bis 5 f&uuml;r sehr gut. Der Benutzer liest einen Beitrag, welcher sich auf ein Unternehmen bezieht, bewertet rein nach Gef&uuml;hl die Stimmung im Bezug auf das Unternehmen und sendet seine Bewertung ab. Es folgt automatisch der n&auml;chste Beitrag. Theoretisch geht dies so lange, bis er alle Eintr&auml;ge bewertet hat</p>
-                <p>Die Motiviation f&uuml;r den Nutzer Beitr&auml;ge zu bewerten liegt in einem Punktesystem. F&uuml;r jeden bewerteten Post werden dem Nutzer 10 RPs (ReviewPoints) gutgeschrieben. F&uuml;r verschiedene Pr&auml;mien m&uuml;ssen verschiedene Punktezahlen erreicht werden (Beispiel: F&uuml;r einen Kaffe am CafeCampus f&uuml;r Studenten der Universit&auml;t G&ouml;ttingen reichen 1000 RPs, ein 5 Euro Amazon-Gutschein ist 7500 RPs wert. Um ein wahlloses durchklicken des Nutzers zu verhindern werden neben dem Limit der pro Tag maximal abzugebenden Reviews auch Zeiten zwischen den einzelnen Posts vorgegeben. Ein Post mit bspw. nur 100 Zeichen muss erst 10 Sekunden angezeigt werden, bevor er bewertet werden kann. Ist ein Beitrag l&auml;nger, bspw. 500 Zeichen, so wird er entsprechend l&auml;nger angezeigt.</p>
-                <p>Nachdem eine ausreichende Anzahl an Posts von verschiedenen Leuten bewertet wurde, werden die Beitr&auml;ge inklusive deren unterschiedlicher Bewertungen extrahiert und dienen nun dem Training eines neuronalen Netzes.</p>
-                <p>Ziel ist es, das Netzwerk so zu trainieren, dass es m&ouml;glichst realit&auml;tsnahe Bewertungen f&uuml;r Posts abgibt, die man dem Netzwerk ohne vorige Bewertungen gibt.</p>
             </div>
         </div>
     </div>
