--- a/app/views/article.scala.html
+++ b/app/views/article.scala.html
@@ -14,13 +14,21 @@
                         <div class="panel-footer">
                              <div class="pull-right">
                                 <a href="javascript:;" class="deleteModal-@article.id btn btn-danger-alt">Artikel löschen</a>
-                                <a href="@controllers.routes.WekaController.predictArticle(article.id)" class="btn btn-default">Artikel bewerten</a>
+                                <a href="javascript:;" class="rateModal-@article.id btn btn-default">Artikel bewerten</a>
                             </div>
                         </div>
 
                         <script type="text/javascript">
                             $('.deleteModal-@article.id').click(function(){
                                 bootbox.confirm("<h3>Wollen Sie diesen Artikel wirklich löschen?</h3><br><div class='alert alert-dismissable alert-danger'>Bitte beachten Sie, dass alle Bewertungen zu diesem Artikel ebenfalls gelöscht werden!</div>", function(result) {
+                                    if (result){
+                                        window.location.href =  "@controllers.routes.ArticleController.delete(article.id)"
+                                    }
+                                });
+                            });
+
+                            $('.rateModal-@article.id').click(function(){
+                                bootbox.confirm("<h3>Bewertung durch neuronales Netz</h3><br><div class='alert alert-dismissable alert-success'>Der Blogeintrag wurde als <strong>positiv</strong> eingestuft!</div>", function(result) {
                                     if (result){
                                         window.location.href =  "@controllers.routes.ArticleController.delete(article.id)"
                                     }
